cabal-version:       3.0
name:                crypto-rng
version:             0.3.0.2
synopsis:            Cryptographically secure random number generator.

description:         Convenient wrapper for the source of random bytes
                     provided by the @entropy@ package.

homepage:            https://github.com/scrive/crypto-rng
license:             BSD-3-Clause
license-file:        LICENSE
author:              Scrive AB
maintainer:          Andrzej Rybczak <andrzej.rybczak@scrive.com>
copyright:           Scrive AB
category:            Crypto
build-type:          Simple
tested-with:         GHC == { 8.8.4, 8.10.7, 9.0.2, 9.2.8, 9.4.8, 9.6.7, 9.8.4, 9.10.2, 9.12.2 }
extra-source-files:  ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/scrive/crypto-rng.git

library
  ghc-options:        -Wall -Wcompat

  exposed-modules:     Crypto.RNG
                       Crypto.RNG.Class
                       Crypto.RNG.Utils
                       Crypto.RNG.Unsafe

  build-depends:       base              >= 4.13    && < 5
                     , bytestring        >= 0.10.8
                     , entropy           >= 0.4
                     , exceptions        >= 0.8.3
                     , mempack           >= 0.1.2.0
                     , monad-control     >= 1.0.1
                     , mtl               >= 2.2
                     , primitive         >= 0.7
                     , random            >= 1.2     && <1.4
                     , transformers-base >= 0.4.4

  hs-source-dirs:      src

  default-language:    Haskell2010
